# learning-cpp

parser-combinators/: README.md  bun.lockb  package.json
parser-combinators/src/: app.tsx
tokenizer/: CMakeLists.txt  README.md  build.sh  test  tests.cpp
tokenizer/include/: grammar_ctre_regexp.hpp  pc.hpp
tokenizer/include/parsers/: instructions.hpp  mov.hpp  primitives.hpp
tokenizer/include/pc/: combinators.hpp  parsers.hpp  pc.hpp  utils.hpp
tokenizer/src/: main.cpp
tokenizer/tests/: CMakeLists.txt  pc_tests.cpp
